--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="container" id="main"></div>
+    <div class="container" id="root"></div>
 
   </body>
 </html>
