--- a/public/index.html
+++ b/public/index.html
@@ -31,5 +31,6 @@
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div class="container" id="nav"></div>
 <div class="container" id="root"></div>
+<div class="container" id="msg"></div>
 </body>
 </html>
